# stahl

./: .gitignore  .travis.yml  Cargo.toml  Justfile  Makefile  README.md  api.html  book.toml  bootstrap.lisp  index.html  print.html  scratchpad.stahl  searchindex.js  searchindex.json  stahl.cabal
.travis/: Dockerfile
api/: aliases.js  search-index.js  source-files.js
api/atty/: enum.Stream.html
api/backtrace_sys/: enum.backtrace_state.html
api/bit_set/: index.html  struct.BitSet.html  struct.Difference.html  struct.Intersection.html  struct.Iter.html  struct.SymmetricDifference.html  struct.Union.html
api/bit_vec/: struct.BitVec.html  struct.Blocks.html  struct.IntoIter.html  struct.Iter.html  trait.BitBlock.html
api/dirs/: fn.audio_dir.html  fn.cache_dir.html  fn.config_dir.html  fn.data_dir.html  fn.data_local_dir.html  fn.desktop_dir.html  fn.document_dir.html  fn.download_dir.html  fn.executable_dir.html  fn.font_dir.html  fn.home_dir.html  fn.picture_dir.html  fn.public_dir.html  fn.runtime_dir.html  fn.template_dir.html  fn.video_dir.html  index.html
api/heck/: trait.CamelCase.html  trait.KebabCase.html  trait.MixedCase.html  trait.ShoutySnakeCase.html  trait.ShoutySnekCase.html  trait.SnakeCase.html  trait.SnekCase.html  trait.TitleCase.html
api/lalrpop_util/: all.html  enum.ParseError.html  index.html  macro.lalrpop_mod.html  struct.ErrorRecovery.html
api/lazy_static/: fn.initialize.html
api/nix/: all.html  enum.Error.html  index.html  macro.ioctl_none.html  macro.ioctl_none_bad.html  macro.ioctl_read.html  macro.ioctl_read_bad.html  macro.ioctl_read_buf.html  macro.ioctl_readwrite.html  macro.ioctl_readwrite_bad.html  macro.ioctl_readwrite_buf.html  macro.ioctl_write_buf.html  macro.ioctl_write_int.html  macro.ioctl_write_int_bad.html  macro.ioctl_write_ptr.html  macro.ioctl_write_ptr_bad.html  trait.NixPath.html  type.Result.html
api/proptest/: all.html  index.html  macro.prop_assert.html  macro.prop_assert_eq.html  macro.prop_assert_ne.html  macro.prop_assume.html  macro.prop_compose.html  macro.prop_oneof.html  macro.proptest.html
api/rand/: trait.RngCore.html  trait.SeedableRng.html
api/rand_os/: index.html
api/rusty_fork/: all.html  enum.Error.html  fn.fork.html  index.html  macro.rusty_fork_id.html  macro.rusty_fork_test.html  macro.rusty_fork_test_name.html  struct.ChildWrapper.html  struct.ExitStatusWrapper.html  struct.RustyForkId.html  type.Result.html
api/rustyline/: At.t.html  Helper.t.html  KeyPress.t.html  RepeatCount.t.html  all.html  enum.Anchor.html  enum.At.html  enum.CharSearch.html  enum.Cmd.html  enum.KeyPress.html  enum.Movement.html  enum.Word.html  index.html  sidebar-items.js  struct.Editor.html  struct.Iter.html  trait.Helper.html  type.RepeatCount.html  type.Result.html
api/spin/: all.html  index.html  struct.Mutex.html  struct.MutexGuard.html  struct.Once.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockWriteGuard.html
api/stahl/: all.html  fn.run_package.html  fn.run_script.html  index.html  run_package.v.html  run_script.v.html  sidebar-items.js
api/stahl_ast/: FQName.t.html  LibName.t.html  all.html  enum.Decl.html  enum.Expr.html  enum.Intrinsic.html  enum.Literal.html  index.html  sidebar-items.js  struct.Effects.html  struct.FQName.html  struct.LibName.html
api/stahl_context/: DefTyCtorsContext.t.html  UnifExpr.t.html  all.html  enum.UnifExpr.html  index.html  sidebar-items.js  struct.Context.html  struct.DefContext.html  struct.DefTyCtorsContext.html  struct.DefTyKindContext.html  struct.LibContext.html  struct.ModContext.html  struct.UnifEffs.html  struct.Zipper.html
api/stahl_cst/: all.html  enum.Decl.html  enum.Expr.html  index.html  sidebar-items.js
api/stahl_errors/: PointLC.t.html  all.html  ensure_eq.m.html  ensure_ne.m.html  enum.Position.html  index.html  macro.ensure.html  macro.ensure_eq.html  macro.ensure_ne.html  macro.err.html  macro.raise!.html  macro.raise.html  macro.todo.html  sidebar-items.js  struct.Error.html  struct.Location.html  struct.PointLC.html  trait.ResultExt.html  type.Result.html
api/stahl_interpreter/: all.html  index.html  sidebar-items.js  struct.Interpreter.html
api/stahl_modules/: all.html  index.html  sidebar-items.js  struct.Library.html  struct.Module.html
app/: Main.hs
bootstrap/: Pipfile  ast.lisp  bootstrap.asd  cam.lisp  codegen.lisp  cst-to-ast.lisp  cst.lisp  forth.lisp  highlight.lisp  main.lisp  main.py  main.rkt  modules.lisp  names.lisp  package.lisp  parser.py  syntax.lisp  syntax.rkt  tyck.lisp  utils.lisp
components/context/: Cargo.toml
components/context/src/: builtins.rs  def_ctx.rs  defty_ctx.rs  elab.rs  inductive.rs  lib.rs  lib_ctx.rs  mod_ctx.rs  split_vec.rs  types.rs  zipper.rs
components/context/src/elab/: complex_movements.rs  mod.rs  normalize.rs  tactical.rs  unify.rs  zipper.rs
components/context/src/zipper/: complex_movements.rs  mod.rs  tactical.rs
components/interpreter/: Cargo.toml
components/interpreter/src/: lib.rs
components/modules/: Cargo.toml
components/modules/src/: from_values.rs  lib.rs  load.rs
components/parser/: Cargo.toml
components/parser/examples/: test_lexer.rs  test_parser.rs
components/parser/src/: grammar.lalrpop  lexer.rs  lib.rs  print.rs  tests.rs
components/parser/tests/: parse_all_in_repo.rs
components/value/: Cargo.toml
components/value/src/: cfg_proptest.rs  lib.rs
doc/: cam.md  eliminators.md  syntax.md
docs/: SUMMARY.md  api.md
examples/: hello-world.stahl  proofs.stahl  sandbox.stahl
hosted/: Makefile  README.md
language/: eliminators.html  index.html  syntax.html
metatheory/: preservation.elf  util.elf
proofs/: Makefile  README.md
scripts/: get-stahl-bootstrap.sh
src/: Main.hs  Tests.hs  builtins.rs  interpret.rs  lib.rs  main.rs  options.rs  parser.stahl  repl.rs  script.rs  std.stahl  tests.rs
std/: README.md  cat-theory.stahl  data.stahl  group-theory.stahl  lib.stahld  prelude.stahl  std.stahl
test-cases/: parser.stahl  parser.stahl.golden
tests/: basic.rs  regression.rs  regression.stahl  should_fail.rs
(+1433 files in other folders)
