[workspace]
members = [
	".",
	"components/ast",
	"components/context",
	"components/cst",
	"components/errors",
	"components/interpreter",
	"components/modules",
	"components/parser",
	"components/util"
]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A dependently typed Lisp with algebraic effects."
edition = "2018"
name = "stahl"
version = "0.1.0"

[dependencies]
dirs = "1.0.4"
log = "0.4.6"
rustyline = "3.0.0"
stahl_cst = { path = "components/cst" }
stahl_context = { path = "components/context" }
stahl_errors = { path = "components/errors" }
stahl_interpreter = { path = "components/interpreter" }
stahl_modules = { path = "components/modules" }
stahl_parser = { path = "components/parser" }
stahl_util = { path = "components/util" }
stderrlog = "0.4.1"
structopt = "0.2.14"
