cabal-version: 1.12
name:          stahl
version:       0.1.0.0
build-type:    Simple
extra-source-files: src/Language/Stahl/Parser.y
    
library
  exposed-modules:
      Language.Stahl
    , Language.Stahl.Error
    , Language.Stahl.Util
  other-modules:
      Language.Stahl.Ast
    , Language.Stahl.Lexer
    , Language.Stahl.Parser
    , Language.Stahl.Value
  hs-source-dirs: src
  build-tools: happy
  build-depends:
      base        >= 4.11.0 && < 4.13
    , array       >= 0.5.2  && < 0.6
    , bytestring  >= 0.10.8 && < 0.11
    , containers  >= 0.6.0  && < 0.7
    , lens        >= 4.17   && < 4.18
    , mtl         >= 2.2.2  && < 2.3
    , monad-loops >= 0.4.3  && < 0.5
    , utf8-string >= 1.0.1  && < 1.1
  ghc-options: -funbox-strict-fields -fwarn-tabs -O2
  default-language: Haskell2010
  default-extensions:
      DefaultSignatures
    , FlexibleContexts
    , LambdaCase
    , OverloadedStrings
    , TemplateHaskell
  other-extensions:
      DeriveFoldable
    , DeriveFunctor
    , DeriveTraversable
    , RankNTypes

executable stahl
  main-is: src/Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      stahl
    , base                 >= 4.11.0 && < 4.13
    , bytestring           >= 0.10.8 && < 0.11
    , mtl                  >= 2.2.2  && < 2.3
    , optparse-applicative >= 0.14.3 && < 0.15
    , utf8-string          >= 1.0.1  && < 1.1
  default-language: Haskell2010
  default-extensions: LambdaCase

test-suite tests
  type: exitcode-stdio-1.0
  main-is: src/Tests.hs
  build-depends:
      stahl
    , base                   >= 4.11.0 && < 4.13
    , bytestring             >= 0.10.8 && < 0.11
    , mtl                    >= 2.2.2  && < 2.3
    , QuickCheck             >= 2.12.6 && < 2.13
    , tasty                  >= 1.2.1  && < 1.3
    , tasty-expected-failure >= 0.11.1 && < 0.12
    , tasty-golden           >= 2.3.2  && < 2.4
    , tasty-hunit            >= 0.10.0 && < 0.11
    , tasty-quickcheck       >= 0.10   && < 0.11
    , utf8-string            >= 1.0.1  && < 1.1
  default-language: Haskell2010
