cabal-version: 1.12
name:          stahl
version:       0.1.0.0
build-type:    Simple
extra-source-files: src/Language/Stahl/Parser.y
    
library
  exposed-modules:
      Language.Stahl
    , Language.Stahl.Env
    , Language.Stahl.Error
    , Language.Stahl.Modules
    , Language.Stahl.TyCk
    , Language.Stahl.Util
    , Language.Stahl.Util.MonadGensym
    , Language.Stahl.Util.MonadNonfatal
  other-modules:
      Language.Stahl.Ast
    , Language.Stahl.Ast.Builtins
    , Language.Stahl.Ast.Holed
    , Language.Stahl.Ast.HoledI
    , Language.Stahl.Ast.Unholed
    , Language.Stahl.Ast.Unifying
    , Language.Stahl.Lexer
    , Language.Stahl.Modules.FromValue
    , Language.Stahl.Modules.Types
    , Language.Stahl.Parser
    , Language.Stahl.TyCk.Generator
    , Language.Stahl.TyCk.Solver
    , Language.Stahl.TyCk.Types
    , Language.Stahl.Util.LensedState
    , Language.Stahl.Util.Value
    , Language.Stahl.Value
  hs-source-dirs: src
  build-tools: happy
  build-depends:
      base                   >= 4.11.0 && < 4.13
    , ansi-terminal          >= 0.9    && < 0.10
    , array                  >= 0.5.2  && < 0.6
    , bytestring             >= 0.10.8 && < 0.11
    , containers             >= 0.6.0  && < 0.7
    , data-default           >= 0.7.1  && < 0.8
    , directory              >= 1.3.3  && < 1.4
    , filepath               >= 1.4.2  && < 1.5
    , lens                   >= 4.17   && < 4.18
    , mtl                    >= 2.2.2  && < 2.3
    , monad-loops            >= 0.4.3  && < 0.5
    , transformers           >= 0.5.5  && < 0.6
    , utf8-string            >= 1.0.1  && < 1.1
  ghc-options: -funbox-strict-fields -fwarn-incomplete-patterns -fwarn-tabs -fwarn-unused-imports -O2
  default-language: Haskell2010
  default-extensions:
      DefaultSignatures
    , DeriveFoldable
    , DeriveFunctor
    , DeriveTraversable
    , FlexibleContexts
    , FlexibleInstances
    , LambdaCase
    , OverloadedStrings
    , ScopedTypeVariables
    , TemplateHaskell
    , TupleSections
    , TypeOperators
    , ViewPatterns
  other-extensions:
      DeriveGeneric
    , FunctionalDependencies
    , GADTs
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , Rank2Types
    , RankNTypes
    , StandaloneDeriving
    , UndecidableInstances

executable stahl
  main-is: Main.hs
  other-modules:
      Commands.Check
    , Commands.Parse
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      stahl
    , base                 >= 4.11.0 && < 4.13
    , bytestring           >= 0.10.8 && < 0.11
    , mtl                  >= 2.2.2  && < 2.3
    , optparse-applicative >= 0.14.3 && < 0.15
    , utf8-string          >= 1.0.1  && < 1.1
  default-language: Haskell2010
  default-extensions: LambdaCase

test-suite tests
  type: exitcode-stdio-1.0
  main-is: src/Tests.hs
  build-depends:
      stahl
    , base                   >= 4.11.0 && < 4.13
    , bytestring             >= 0.10.8 && < 0.11
    , containers             >= 0.6.0  && < 0.7
    , data-default           >= 0.7.1  && < 0.8
    , lens                   >= 4.17   && < 4.18
    , mtl                    >= 2.2.2  && < 2.3
    , QuickCheck             >= 2.12.6 && < 2.13
    , tasty                  >= 1.2.1  && < 1.3
    , tasty-expected-failure >= 0.11.1 && < 0.12
    , tasty-golden           >= 2.3.2  && < 2.4
    , tasty-hunit            >= 0.10.0 && < 0.11
    , tasty-quickcheck       >= 0.10   && < 0.11
    , utf8-string            >= 1.0.1  && < 1.1
  default-language: Haskell2010
