[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
name = "stahl_context"
version = "0.1.0"

[dependencies]
derivative = "1.0.2"
log = "0.4.6"
maplit = "1.0.1"
stahl_ast = { path = "../ast" }
stahl_cst = { path = "../cst" }
stahl_errors = { path = "../errors" }
stahl_modules = { path = "../modules" }
stahl_util = { path = "../util" }
