[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
name = "stahl_interpreter"
version = "0.1.0"

[dependencies]
stahl_ast = { path = "../ast" }
stahl_context = { path = "../context" }
stahl_errors = { path = "../errors" }
stahl_util = { path = "../util" }
