[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
name = "stahl_modules"
version = "0.1.0"

[dependencies]
maplit = "1.0.1"
stahl_ast = { path = "../ast" }
stahl_cst = { path = "../cst" }
stahl_errors = { path = "../errors" }
stahl_parser = { path = "../parser" }
stahl_util = { path = "../util" }
