[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
name = "stahl_modules"
version = "0.1.0"

[dependencies]
log = "0.4.6"
maplit = "1.0.1"
stahl_ast = { path = "../ast" }
stahl_cst = { path = "../cst" }
stahl_errors = { path = "../errors" }
stahl_iexpr_parser = { path = "../iexpr_parser" }
stahl_util = { path = "../util" }
stahl_value = { path = "../value" }
