[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
build = "build.rs"
edition = "2018"
license = "Apache-2.0/MIT"
name = "stahl_parser"
version = "0.1.0"

[dependencies]
failure = "0.1.3"
lalrpop-util = "0.16.2"
regex = "1.1.0"
stahl_errors = { path = "../errors" }
stahl_util = { path = "../util" }
stahl_value = { path = "../value" }

[build-dependencies]
lalrpop = "0.16.2"

[dev-dependencies]
proptest = "0.9.1"
stahl_value = { features = ["proptest"], path = "../value"  }
pretty_assertions = "0.6.1"
