[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
name = "stahl_value"
version = "0.1.0"

[dependencies]
derivative = "1.0.2"
failure = "0.1.3"
lalrpop-util = "0.16.2"
regex = "1.1.0"
stahl_errors = { path = "../errors" }
stahl_util = { path = "../util" }

[build-dependencies]
lalrpop = "0.16.2"

[dev-dependencies]
proptest = "0.8.7"
